Installing cors
